force-app/main/default/objects/MS_FSM_Tool_Calibration__c/MS_FSM_Tool_Calibration__c.object-meta.xml
<CustomObject>
    <description>O&amp;M maintains tooling and safety equipment that requires periodic calibration. This object allows us to track calibrations and to share history with our customers if/when required as part of service agreements.</description>
    <label>Tool Calibration</label>
    <nameField>
        <displayFormat>TC-{0000000000}</displayFormat>
        <label>Tool Calibration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tool Calibrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>