force-app/main/default/objects/MS_FSM_Tool_Calibration__c/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <label>Current Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calibration Owner</fullName>
            </value>
            <value>
                <fullName>HQ Inventory</fullName>
                <default>true</default>
                <label>HQ Inventory</label>
            </value>
            <value>
                <fullName>In-transit</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Third-Party Calibration</fullName>
            </value>
            <value>
                <fullName>Tool Owner</fullName>
            </value>
            <value>
                <fullName>Scrapped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>