force-app/main/default/objects/MS_FSM_Tool_Calibration__c/fields/MS_FSM_Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tool_Calibrations</relationshipName>
    <type>Lookup</type>
</CustomField>