force-app/main/default/objects/MS_FSM_Tool_Calibration__c/fields/MS_FSM_Calibration_Frequency__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Calibration_Frequency__c</fullName>
    <label>Calibration Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>