force-app/main/default/objects/MS_FSM_Tool_Calibration__c/fields/MS_FSM_Calibration_Owner__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Calibration_Owner__c</fullName>
    <label>Calibration Owner</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>