force-app/main/default/objects/MS_FSM_Tool_Calibration__c/fields/MS_FSM_Last_Calibration__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Last_Calibration__c</fullName>
    <label>Last Calibration</label>
    <required>true</required>
    <type>Date</type>
</CustomField>