force-app/main/default/objects/MS_FSM_Tool_Calibration__c/fields/MS_FSM_Next_60_Days__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Next_60_Days__c</fullName>
    <formula>MS_FSM_Next_Calibration__c &lt;= TODAY() + 60 &amp;&amp;  MS_FSM_Overdue_Calibration__c != True</formula>
    <label>Next 60 Days</label>
    <type>Checkbox</type>
</CustomField>