force-app/main/default/objects/MS_FSM_Tool_Calibration__c/fields/MS_FSM_Next_Calibration__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Next_Calibration__c</fullName>
    <formula>IF( ISPICKVAL( MS_FSM_Calibration_Frequency__c, &quot;1 Month&quot; ), ADDMONTHS(MS_FSM_Last_Calibration__c, 1), 
IF( ISPICKVAL( MS_FSM_Calibration_Frequency__c, &quot;3 Months&quot; ), ADDMONTHS(MS_FSM_Last_Calibration__c, 3), 
IF( ISPICKVAL( MS_FSM_Calibration_Frequency__c, &quot;6 Months&quot; ), ADDMONTHS(MS_FSM_Last_Calibration__c, 6), 
IF( ISPICKVAL( MS_FSM_Calibration_Frequency__c, &quot;1 year&quot; ), ADDMONTHS(MS_FSM_Last_Calibration__c, 12), 
IF( ISPICKVAL( MS_FSM_Calibration_Frequency__c, &quot;2 years&quot; ), ADDMONTHS(MS_FSM_Last_Calibration__c, 24), 
NULL)))))</formula>
    <label>Next Calibration</label>
    <type>Date</type>
</CustomField>