force-app/main/default/objects/MS_FSM_Tool_Calibration__c/fields/MS_FSM_Overdue_Calibration__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Overdue_Calibration__c</fullName>
    <formula>MS_FSM_Next_Calibration__c &lt; TODAY()</formula>
    <label>Overdue Calibration</label>
    <type>Checkbox</type>
</CustomField>