force-app/main/default/objects/MS_FSM_Tool_Calibration__c/fields/MS_FSM_Tool_Name__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Tool_Name__c</fullName>
    <description>Name of tool used</description>
    <label>Tool Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>