force-app/main/default/objects/MS_FSM_Tool_Calibration__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>Serial number of tool used</description>
    <label>Serial Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>