force-app/main/default/objects/MS_FSM_Tool_Calibration__c/fields/Tool_Type__c.field-meta.xml
<CustomField>
    <fullName>Tool_Type__c</fullName>
    <description>Type of tool used</description>
    <label>Tool Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multimeter</fullName>
            </value>
            <value>
                <fullName>Pre-set torque wrench</fullName>
            </value>
            <value>
                <fullName>Adjustable torque wrench</fullName>
            </value>
            <value>
                <fullName>Gas monitor</fullName>
            </value>
            <value>
                <fullName>Measurement Dial</fullName>
            </value>
            <value>
                <fullName>Battery Charger</fullName>
            </value>
            <value>
                <fullName>Bearing Flow Meter</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>