force-app/main/default/objects/MS_FSM_Tool_Calibration__c/listViews/Upcoming_Calibrations.listView-meta.xml
<ListView>
    <fullName>Upcoming_Calibrations</fullName>
    <columns>NAME</columns>
    <columns>MS_FSM_Tool_Name__c</columns>
    <columns>Tool_Type__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>MS_FSM_Last_Calibration__c</columns>
    <columns>MS_FSM_Next_Calibration__c</columns>
    <columns>Current_Location__c</columns>
    <columns>MS_FSM_Assigned_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MS_FSM_Next_60_Days__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Upcoming Calibrations</label>
</ListView>